--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "tailwind": "^4.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
